[gd_scene load_steps=7 format=3 uid="uid://cqvmbm6qi3wl0"]

[ext_resource type="Script" path="res://demo/scenarios/many_marios.gd" id="1_5i202"]
[ext_resource type="PackedScene" uid="uid://cqv1tkr0q2m7i" path="res://demo/levels/mini_level.tscn" id="3_j27lm"]
[ext_resource type="Script" path="res://addons/libsm64-godot/mario/sm64_mario.gd" id="4_umvy3"]
[ext_resource type="Script" path="res://addons/libsm64-godot/handlers/sm64_static_surfaces_handler.gd" id="6_41tpo"]
[ext_resource type="Script" path="res://addons/libsm64-godot/handlers/sm64_surface_objects_handler.gd" id="7_ju0gc"]
[ext_resource type="PackedScene" uid="uid://dprpekyttg0g6" path="res://demo/shared/hud.tscn" id="8_f016e"]

[node name="ManyMarios" type="Node3D"]
script = ExtResource("1_5i202")

[node name="MiniLevel" parent="." instance=ExtResource("3_j27lm")]

[node name="SM64Mario" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario2" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.73193, 0, 0)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario3" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.73193, 0, 7.00453)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario4" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00564098, 0, 7.00453)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario5" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1527, 0, 7.00453)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario6" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.74708, 0, -10.8375)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario7" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.81391, 0, -10.8375)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario8" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.81391, 0, -4.56066)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario9" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.29249, 0, -4.56066)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="SM64Mario10" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["libsm64_mario"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.29249, 0, 3.2726)
script = ExtResource("4_umvy3")
camera = NodePath("../Camera3D")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.516309, 0.856402, 0, -0.856402, 0.516309, 0, 23.9055, 16.654)
current = true

[node name="SM64StaticSurfacesHandler" type="Node" parent="."]
script = ExtResource("6_41tpo")

[node name="SM64SurfaceObjectsHandler" type="Node" parent="."]
script = ExtResource("7_ju0gc")

[node name="HUD" parent="." instance=ExtResource("8_f016e")]

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
